set(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(PROJ_HDRS ${PROJ_HDRS} ${MODULE_PATH} )

set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/utils.c)
set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/board_version.c)
set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/led.c)
set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/i2c.c ${MODULE_PATH}/ipmb.c ${MODULE_PATH}/ipmi.c)

if (";${TARGET_MODULES};" MATCHES ";FRU;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/fru.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_FRU")
 endif()

if (";${TARGET_MODULES};" MATCHES ";PAYLOAD;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/payload.c)
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_PAYLOAD")
endif()

if (";${TARGET_MODULES};" MATCHES ";SDR;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/sdr.c )
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/sdr_list.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_SDR")
endif()

if (";${TARGET_MODULES};" MATCHES ";JTAG_SWITCH;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/jtag.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_JTAG_SWITCH")
endif()

if (";${TARGET_MODULES};" MATCHES ";CLOCK_SWITCH;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/adn4604.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_CLOCK_SWITCH")
endif()

if (";${TARGET_MODULES};" MATCHES ";FPGA_SPI;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/fpga_spi.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_FPGA_SPI")
endif()

if (";${TARGET_MODULES};" MATCHES ";DAC_AD84XX;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/ad84xx.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_DAC_AD84XX")
endif()

if (";${TARGET_MODULES};" MATCHES ";WATCHDOG;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/watchdog.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_WATCHDOG")
endif()

if (";${TARGET_MODULES};" MATCHES ";HPM;")
  set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/hpm.c )
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_HPM")
  if (";${TARGET_MODULES};" MATCHES ";PAYLOAD;")
    set(PROJ_SRCS ${PROJ_SRCS} ${MODULE_PATH}/flash_spi.c )
    set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_FLASH_SPI")
  endif()
 endif()

if (";${TARGET_MODULES};" MATCHES "SENSOR")
  set(MODULES_FLAGS "${MODULES_FLAGS} -DMODULE_SENSORS")
  add_subdirectory(sensors)
endif()

set(PROJ_SRCS ${PROJ_SRCS} PARENT_SCOPE)
set(PROJ_HDRS ${PROJ_HDRS} PARENT_SCOPE)
set(MODULES_FLAGS ${MODULES_FLAGS} PARENT_SCOPE)
